Fix bug with audio gaps

--- a/_sass/audioTile.scss
+++ b/_sass/audioTile.scss
@@ -11,6 +11,9 @@
 
   @include desktop {
     width: 25%;
+    &:nth-child(4n + 1) {
+      clear: left;
+    }
   }
 
   &.gap {
